# violet-static-analyzer

./: .gitignore  CMakeLists.txt  README.md  install-llvm.sh
DefUse/: CMakeLists.txt  DefUse.cpp  DefUse.h  PostgresqlAnalyzer.cpp  PostgresqlAnalyzer.h  configurationMap.h  httpanalyzer.cpp  httpanalyzer.h  squidanalyzer.cpp
dependencyAnalysis/: CMakeLists.txt  DefUse.cpp  DefUse.h  PostgresqlAnalyzer.cpp  PostgresqlAnalyzer.h  configurationMap.cpp  dependencyanalyzer.cpp  dependencyanalyzer.h  httpanalyzer.cpp  httpanalyzer.h  httpmap.cpp  httpmap.h  squidanalyzer.cpp  squidanalyzer.h
hello/: CMakeLists.txt  hello.cpp
